      run Tux Paint in 768x1024 mode.)  Useful for tablet PCs.
      Note: override previously-set option with "--orient=landscape" or
      "orient=landscape".

    * Stamp sound effects and stamp descriptive sounds can be re-played
      using small buttons that appear over Tux, at the lower lefthand corner.
      (They disappear/reappear when sound is muted/unmuted via [Alt]+[S].)

  * Tool Improvements:
    ------------------
    * Input Method Framework, with implementations of Korean (Hangul 2-Bul)
      and Japanese (Romanized Hiragana and Romanized Katakana) input methods.
      (Should be extensible to other languages.)
      (Addresses SourceForge Bug #1070414)
      Mark K. Kim <mkkim214@gmail.com>

    * Stamps now supports SVG vector-based graphics!  (Via Cairo library)
      (Only SVG versions of stamps are loaded, when both PNG and SVG
      variations are found.)

      (Experimental; build with "make nosvg" to disable SVG support and
      Cairo dependency.)

    * Stamps now shown in groups.  Use previous & next buttons to
      cycle through stamp categories.
      (Addresses SourceForge Feature Request #1070394)

    * Bilinear interpolation (smoothing) is done to small bitmap (PNG)
      stamps when they are scaled up.
      (Based on example code by Christian Graus:
      http://www.codeproject.com/cs/media/imageprocessing4.asp )

    * New brushes:
      Caroline Ford <caroline.ford.work@googlemail.com>
      + Blob
      + Chisle
      + Cut-out square in diamond
      + Cut-out star in circle
      + Diamond
      + Five-petal flower (large and small)
      + Six-petal flower (large and small)
      + Heart
      + Hexagon
      + Lozenge
      + Oval
      + Pentagon
      + Spiral
      + Splat
      + Star
      + Triangle (up and down)
      + Arrows (directional)
      + Triangles (directional)

    * New starters:
      + 10x10 grid
      + 20x20 grid

  * System-related improvements:
    ----------------------------