@@ -23,7 +23,7 @@ New Breed Software</p>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>May 15, 2007</p>
+<p>June 19, 2007</p>
 
 
 </center>
@@ -997,10 +997,11 @@ New Breed Software</p>
 
     <blockquote>
     <dl>
-      <dt><code><b>--version</b></code></dt>
+      <dt><code><b>--version</b></code><br>
+        <code><b>--verbose-version</b></code></dt>
       <dd>
         Display the version number and date of the copy of Tux&nbsp;Paint
-        you are running.  It also lists what, if any, compile-time
+        you are running.  The "--verbose-version" also lists what compile-time
         options were set.  (See INSTALL.txt and FAQ.txt).
       </dd>
       
