@@ -1,11 +1,11 @@
-.\" tuxpaint.1 - 2007.06.13
-.TH TUXPAINT 1 "13 June 2007" "0.9.17" "Tux Paint"
+.\" tuxpaint.1 - 2007.06.19
+.TH TUXPAINT 1 "19 June 2007" "0.9.17" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
 .SH SYNOPSYS
 .B tuxpaint
-[\-\-help \-\-version \-\-usage \-\-copying]
+[\-\-help \-\-version \-\-verbose\-version \-\-usage \-\-copying]
 
 .TP 9
 .B tuxpaint
@@ -96,6 +96,9 @@ Display short, helpful information about Tux Paint.
 .TP 8
 .B \-\-version
 Output the version info.
+.TP 8
+.B \-\-verbose\-version
+Output the version info and compile-time build options.
 .TP 8
 .B \-\-usage
 Display a list of all commandline options.
@@ -662,6 +665,7 @@ Sam "Criswell" Hart,
 Tedi Heriyanto,
 Pjetur G. Hjaltason,
 Knut Erik Hollund,
+Khaled Hosny,
 Song Huang,
 Karl Ove Hufthammer,
 Roland Illig,
